syntax = "proto3";

package common;
option java_package = "dev.kkorolyov.pieline.proto.common";

// A unique identifier
message Uuid {
  // UUID value
  string value = 1;
}
// List of unique identifiers
message UuidList {
  // Identifiers
  repeated Uuid ids = 1;
}

// Common paging/chunking construct
message Chunk {
  // Token denoting start of chunk to get.
  // Unset implies first chunk.
  // Use the returned token from the previous page response to get subsequent chunks.
  string token = 1;
  // Requested chunk size
  uint32 size = 2;
}
